Added Tab for mod Items and Blocks

--- a/main/resources/assets/tlg/lang/en_us.lang
+++ b/main/resources/assets/tlg/lang/en_us.lang
@@ -1,5 +1,4 @@
-itemGroup.sparkyx_sparks_tab=Sparkyx-Sparks Mod
-itemGroup.testtab=Test Tab
+itemGroup.thelastguardiantab=The Last Guardian
 
 item.feather_trico.name=Trico Feather
 
