--- a/main/resources/assets/tlg/lang/en_us.lang
+++ b/main/resources/assets/tlg/lang/en_us.lang
@@ -4,4 +4,6 @@ item.feather_trico.name=Trico Feather
 
 tile.stone_tiles.name=Stone Tiles
 tile.stone_striped.name=Striped Stone
-
+tile.stone_floor_slab.name=Floor Stone Slab
+tile.stone_moss.name=Stone Moss
+tile.rocks_moss.name=Rocks moss
