Added Unstable Stone
Unstable blocks will be a ew type of block. It is still like a normal block but it will be developed.

--- a/main/resources/assets/tlg/lang/en_us.lang
+++ b/main/resources/assets/tlg/lang/en_us.lang
@@ -7,3 +7,5 @@ tile.stone_striped.name=Striped Stone
 tile.stone_floor_slab.name=Floor Stone Slab
 tile.stone_moss.name=Stone Moss
 tile.rocks_moss.name=Rocks moss
+
+tile.stone_unstable.name=Unstable Stone
